[package]
name = "quantum-flux-vst"
version = "0.1.0"
authors = ["ethaipath <ethaipath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# get from crates.io.
vst = "0.2.1"
time = "0.1"

[[example]]
name = "redux_effect"
crate-type = ["cdylib"]
